<resources>
    <string name="app_name">1-Placement</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="companies">Companies</string>
    <string name="current_openings">Current Openings</string>
    <string name="registered_companies">Registered Companies</string>
    <string name="internships">Internships</string>
    <string name="add_a_new_interview_experience">Add a new Interview Experience</string>
    <string name="view_interview_experience">View Interview Experiences</string>
    <string name="forum_feedback">Forum / Feedback</string>
    <string name="contacts">Contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="admin_key">NamanSinghal</string>
    <string name="no_registered_companies">No registered companies</string>
    <string name="SortBy">Sort By</string>

    <string-array name="theme">
        <item>System Default</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>
</resources>