<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.avishkar2021.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.avishkar2021.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.avishkar2021.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/currentOpeningsFragment"
        android:name="com.example.avishkar2021.Fragments.CurrentOpeningsFragment"
        android:label="@string/current_openings"
        tools:layout="@layout/fragment_current_openings" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.avishkar2021.Fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/addNewInterviewFragment"
        android:name="com.example.avishkar2021.Fragments.AddNewInterviewFragment"
        android:label="@string/add_a_new_interview_experience"
        tools:layout="@layout/fragment_add_new_interview" />
    <fragment
        android:id="@+id/contacts2"
        android:name="com.example.avishkar2021.Fragments.Contacts"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/forumFragment"
        android:name="com.example.avishkar2021.Fragments.ForumFragment"
        android:label="@string/forum_feedback"
        tools:layout="@layout/fragment_forum" />
    <fragment
        android:id="@+id/registeredCompaniesFragment"
        android:name="com.example.avishkar2021.Fragments.RegisteredCompaniesFragment"
        android:label="@string/registered_companies"
        tools:layout="@layout/fragment_registered_companies" />
    <fragment
        android:id="@+id/viewInterviewFragment"
        android:name="com.example.avishkar2021.Fragments.ViewInterviewFragment"
        android:label="@string/view_interview_experience"
        tools:layout="@layout/fragment_view_interview" />
</navigation>